--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,8 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+
 
 
         {
@@ -16,7 +18,7 @@
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
-            // "MIMode": "gdb",
+            "MIMode": "gdb",
             "preLaunchTask": "build",
             // "setupCommands": [
             //     {
