--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,32 +1,54 @@
+// {
+//     "files.associations": {
+//         "*.tcc": "cpp",
+//         "cctype": "cpp",
+//         "clocale": "cpp",
+//         "cstdarg": "cpp",
+//         "cstdint": "cpp",
+//         "cstdio": "cpp",
+//         "cstdlib": "cpp",
+//         "cwchar": "cpp",
+//         "cwctype": "cpp",
+//         "exception": "cpp",
+//         "system_error": "cpp",
+//         "type_traits": "cpp",
+//         "initializer_list": "cpp",
+//         "iosfwd": "cpp",
+//         "iostream": "cpp",
+//         "istream": "cpp",
+//         "limits": "cpp",
+//         "new": "cpp",
+//         "ostream": "cpp",
+//         "stdexcept": "cpp",
+//         "streambuf": "cpp",
+//         "typeinfo": "cpp",
+//         "array": "cpp",
+//         "string_view": "cpp",
+//         "functional": "cpp",
+//         "tuple": "cpp",
+//         "utility": "cpp"
+//     },
+//     "C_Cpp.errorSquiggles": "Disabled"
+// }
+
+
 {
-    "files.associations": {
-        "*.tcc": "cpp",
-        "cctype": "cpp",
-        "clocale": "cpp",
-        "cstdarg": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "exception": "cpp",
-        "system_error": "cpp",
-        "type_traits": "cpp",
-        "initializer_list": "cpp",
-        "iosfwd": "cpp",
-        "iostream": "cpp",
-        "istream": "cpp",
-        "limits": "cpp",
-        "new": "cpp",
-        "ostream": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "typeinfo": "cpp",
-        "array": "cpp",
-        "string_view": "cpp",
-        "functional": "cpp",
-        "tuple": "cpp",
-        "utility": "cpp"
-    },
-    "C_Cpp.errorSquiggles": "Disabled"
+    "workbench.colorTheme": "Visual Studio Dark",
+    "files.autoSave": "onFocusChange",
+    "go.buildOnSave": "off",
+    "go.lintOnSave" :"off",
+    "go.vetOnSave":"off",
+    "go.buildTags": "",
+    "go.buildFlags": [],
+    "go.lintFlags": [],
+    "go.vetFlags": [],
+    "go.coverOnSave": false,
+    "go.useCodeSnippetsOnFunctionSuggest":true,
+    "go.formatTool": "goreturns",
+    "go.goroot": "/usr/local/go",
+    "go.gopath": "/home/wanlei/go",
+    "go.gocodeAutoBuild": false
+
+
+
 }
