--- Auto-Git Commit ---

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,7 @@
 
 
 {
-    "workbench.colorTheme": "Visual Studio Light",
+    "workbench.colorTheme": "Default Dark+",
     "files.autoSave": "onFocusChange",
     "go.buildOnSave": "off",
     "go.lintOnSave" :"off",
